Tested contrast issues on chrome dev tools - none found

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,7 +68,7 @@ header section {
 #Quarry {
     width: 100%
 }
-.about h2 {
+.about h3 {
     color: lightgrey;
     text-align: center;
 }
